# SimpleWatercolorClassification

./: .env.example  .flake8  .gitignore  README.md  debug_results.csv  main.py  pyproject.toml  pytest.ini  test_results.txt  watercolor_results_20251120_104232.csv
.github/workflows/: python-app.yml
src/: asset_mover.py  batch_processor.py  classifier.py  database.py  dedup_processor.py  immich_client.py  video_processor.py
tests/: README.md  conftest.py  test_asset_mover.py  test_batch.py  test_cross_platform.py  test_database.py  test_dedup.py  test_granular_labels.py  test_granular_labels_new.py  test_immich_client.py  test_painting_tag.py  test_path_mapping.py  test_path_translation.py  test_path_translation_edge_cases.py  test_pipeline.py
