[project]
name = "watercolor-classifier"
version = "0.1.0"
description = "A tool to classify images and videos as watercolor paintings using CLIP."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "pillow",
    "opencv-python",
    "ftfy",
    "regex",
    "tqdm",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
